Implemented NVIDIA text model(LLAMA)

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -30,8 +30,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f3d12e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e16a2e7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your OpenAI API Key is: 1122\n"
+     ]
+    }
+   ],
+   "source": [
+    "API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "print(f\"Your OpenAI API Key is: {API_KEY}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88790459",
    "metadata": {},
    "outputs": [],
    "source": []
